--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
 </head>
 <body>
     <h1>My first tag</h1>
+    <p>My first paragraph.</p>
+    <p>My second paragraph.</p>
+    <p>My third paragraph.</p>
 </body>
 </html>
