--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <p>My first paragraph.</p>
     <p>My second paragraph.</p>
     <p>My third paragraph.</p>
+    <p>Git tarixi</p>
 </body>
 </html>
