index.html ul teg added

--- a/index.html
+++ b/index.html
@@ -10,5 +10,14 @@
     <p>My first paragraph.</p>
     <p>My second paragraph.</p>
     <p>My third paragraph.</p>
+    <ul>
+        <li>Home</li>
+        <li>Home</li>
+        <li>Home</li>
+        <li>Home</li>
+        <li>Home</li>
+        <li>Home</li>
+        <li>Home</li>
+    </ul>
 </body>
 </html>
