index.html added class:main_section

--- a/index.html
+++ b/index.html
@@ -19,5 +19,9 @@
         <li>Home</li>
         <li>Home</li>
     </ul>
+
+    <section class="main_section" id="main_section">
+        
+    </section>
 </body>
 </html>
