h1 and p tag added in main_section class

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
     </ul>
 
     <section class="main_section" id="main_section">
-        
+        <h1>My first Web site</h1>
+        <p>My name is Shamshodbek</p>
     </section>
 </body>
 </html>
