h1 and p tag added in class=main_index

--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
     </ul>
 
     <section class="main_section" id="main_section">
-        
+        <h1>My first Web site</h1>
+        <p>My name is Shamshodbek</p>
+        <p>My age 20 years old</p>
     </section>
 </body>
 </html>
