index.html added header and footer

--- a/index.html
+++ b/index.html
@@ -6,23 +6,28 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>My first tag</h1>
-    <p>My first paragraph.</p>
-    <p>My second paragraph.</p>
-    <p>My third paragraph.</p>
-    <ul>
-        <li>Home</li>
-        <li>Home</li>
-        <li>Home</li>
-        <li>Home</li>
-        <li>Home</li>
-        <li>Home</li>
-        <li>Home</li>
-    </ul>
+    <header class="header_main">
+        <h1>My first tag</h1>
+        <p>My first paragraph.</p>
+        <p>My second paragraph.</p>
+        <p>My third paragraph.</p>
+        <ul>
+            <li>Home</li>
+            <li>Home</li>
+            <li>Home</li>
+            <li>Home</li>
+            <li>Home</li>
+            <li>Home</li>
+            <li>Home</li>
+        </ul>
+    </header>
 
     <section class="main_section" id="main_section">
         <h1>My first Web site</h1>
         <p>My name is Shamshodbek</p>
     </section>
+    <footer>
+        My First web site with git hub
+    </footer>
 </body>
 </html>
